RESOLVED FIXED178054
Octane/splay can leak memory due to stray pointers on the stack when run from the command line
https://bugs.webkit.org/show_bug.cgi?id=178054
Summary Octane/splay can leak memory due to stray pointers on the stack when run from...
Filip Pizlo
Reported 2017-10-07 16:37:29 PDT
Patch forthcoming.
Attachments
the patch (8.67 KB, patch)
2017-10-07 16:38 PDT, Filip Pizlo
no flags
the patch (9.65 KB, patch)
2017-10-07 17:51 PDT, Filip Pizlo
saam: review+
Filip Pizlo
Comment 1 2017-10-07 16:38:30 PDT
Created attachment 323106 [details] the patch
Filip Pizlo
Comment 2 2017-10-07 17:51:12 PDT
Created attachment 323108 [details] the patch
Saam Barati
Comment 3 2017-10-07 17:59:15 PDT
Comment on attachment 323108 [details] the patch View in context: https://bugs.webkit.org/attachment.cgi?id=323108&action=review > Source/JavaScriptCore/runtime/VM.cpp:-454 > -{ Please revert
Filip Pizlo
Comment 4 2017-10-07 18:13:23 PDT
Radar WebKit Bug Importer
Comment 5 2017-10-07 18:14:04 PDT
Note You need to log in before you can comment on or make changes to this bug.