Source/JavaScriptCore/jit/AssemblyHelpers.h
@@ -1387,6 +1387,8 @@ public:
         return branchTest8(Zero, AbsoluteAddress(vm.heap.addressOfMutatorShouldBeFenced()));
     }
     
+    void sanitizeStackInline(VM&, GPRReg scratch);
+    
     // Emits the branch structure for typeof. The code emitted by this doesn't fall through. The
     // functor is called at those points where we have pinpointed a type. One way to use this is to
     // have the functor emit the code to put the type string into an appropriate register and then
